# obadh-ios

./: .gitignore  Package.swift  README.md  project.yml
Config/: ObadhKeyboard.entitlements  Signing.xcconfig
Obadh.xcodeproj/: project.pbxproj
ObadhApp/: Info-Legacy.plist  Info.plist
ObadhApp/Sources/: AboutView.swift  AppSetupState.swift  Brand.swift  KeyboardGeometryProbeView.swift  ObadhApp.swift  OnboardingView.swift  PrivacyView.swift  RootView.swift  SettingsView.swift  SetupViewController.swift  SetupWalkthrough.swift
ObadhKeyboard/: Info.plist
ObadhKeyboard/Sources/: KeyboardViewController.swift
Tests/ObadhEngineTests/: ObadhEngineIntegrationTests.swift
Tests/ObadhKeyboardCoreTests/: BackspaceDeletionPlannerTests.swift  BackspaceRepeatPolicyTests.swift  BanglaEmojiSuggestionStoreTests.swift  CursorWordDetectorTests.swift  EmojiDataStoreTests.swift  EmojiGridMetricsTests.swift  EmojiRecentStoreTests.swift  EmojiVariantPreferenceStoreTests.swift  FakeCompositionDocument.swift  KeyboardComposerTests.swift  KeyboardInstallStateTests.swift  KeyboardLayoutProviderTests.swift  (+7 more)
docs/: architecture.md  autocorrect.md  build-and-release.md  emoji.md  native-parity.md  testing.md  text-composition.md
rust/ObadhBridge/: Cargo.toml
rust/ObadhBridge/include/: ObadhBridge.h  module.modulemap
rust/ObadhBridge/src/: lib.rs
scripts/: bootstrap.sh  build-rust-xcframework.sh  curated_bangla_emoji.py  generate-emoji-data.py  install-device.sh  measure-keyboard-geometry.py  measure-landscape-keyboard.py  sim-kbd.py  sim-keyboard-shot.sh  stamp-build.sh
(+50 files in other folders)
