[package]
name = "obadh_ios_bridge"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
# The FFI surface is the engine's own C ABI, exposed by its `cabi` feature
# (header: include/obadh.h). This crate exists only to link that surface into a
# staticlib for the iOS xcframework — see src/lib.rs.
obadh_engine = { version = "0.9.0", features = ["cabi"] }
